--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.tomi.myapplication.MainActivity"
+    tools:context="com.example.tomi.pos_android.MainActivity"
     android:orientation="horizontal">
 
 
@@ -12,118 +12,100 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="horizontal"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
+        <RelativeLayout
+            android:layout_width="155dp"
+            android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp">
-
-            <TableLayout
-                android:layout_width="match_parent"
-                android:layout_height="230dp">
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_span="4"
-                        android:text="Title"
-                        android:textSize="30dp" />
-                </TableRow>
-
-                <TableRow>
-
-                    <TextView
-                        android:layout_span="4"
-                        android:text=" " />
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:text="項目"
-                        android:layout_weight="1"
-                        />
-
-                    <TextView
-                        android:text="數量"
-                        android:layout_weight="1"
-                        />
-
-                    <TextView
-                        android:text="單價"
-                        android:layout_weight="1"
-                        />
-
-                    <TextView
-                        android:text="總價"
-                        android:layout_weight="1"
-                        />
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:text="item1"
-                        android:textSize="10dp" />
-
-                    <TextView
-                        android:text="amount"
-                        android:textSize="10dp" />
-
-                    <TextView
-                        android:text="price"
-                        android:textSize="10dp" />
-
-                    <TextView
-                        android:text="total"
-                        android:textSize="10dp" />
-                </TableRow>
-
-            </TableLayout>
-
-            <TableLayout
-                android:layout_width="match_parent"
+            android:layout_marginRight="20dp"
+            android:orientation="vertical"
+            android:weightSum="1">
+            <ScrollView
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                tools:layout_editor_absoluteX="8dp"
-                tools:layout_editor_absoluteY="8dp">
+                android:layout_above="@+id/tableLayout">
+                <TableLayout
+                    android:id="@+id/total_table"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.81"
+                    android:stretchColumns="*">
+
+                    <TableRow>
+
+                        <TextView
+                            android:layout_span="4"
+                            android:text=" " />
+                    </TableRow>
+
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:layout_weight="1"
+                            android:text="項目"
+                            android:textSize="14sp" />
+
+                        <TextView
+                            android:layout_weight="1"
+                            android:text="數量"
+                            android:textSize="14sp" />
+
+                        <TextView
+                            android:layout_weight="1"
+                            android:text="單價"
+                            android:textSize="14sp" />
+
+                        <TextView
+                            android:layout_weight="1"
+                            android:text="總價"
+                            android:textSize="14sp" />
+
+                    </TableRow>
+
+                </TableLayout>
+            </ScrollView>
+
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:stretchColumns="*"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="20dp"
+                android:id="@+id/tableLayout">
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
+                    android:layout_height="match_parent"
+                    >
                     <TextView
                         android:id="@+id/textView"
-                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Total" />
+                        android:text="總計" />
 
                     <TextView
-                        android:id="@+id/textView2"
+                        android:id="@+id/total_amount"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="200" />
                 </TableRow>
-
+                <TableRow>
+                    <Button
+                        android:id="@+id/payBillButton"
+                        android:gravity="center"
+                        android:layout_span="2"
+                        android:text="付款"/>
+                </TableRow>
             </TableLayout>
-        </LinearLayout>
+        </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <TabHost
                 android:id="@+id/tabHost"
                 android:layout_width="fill_parent"
@@ -153,12 +135,12 @@
 
                             <GridView
                                 android:id="@+id/gridview"
-                                android:columnWidth="100dp"
-                                android:numColumns="auto_fit"
-                                android:horizontalSpacing="5dp"
-                                android:verticalSpacing="5dp"
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent">
+                                android:layout_height="match_parent"
+                                android:columnWidth="100dp"
+                                android:horizontalSpacing="5dp"
+                                android:numColumns="auto_fit"
+                                android:verticalSpacing="5dp">
 
                             </GridView>
                         </LinearLayout>
